--- a/.abf.yml
+++ b/.abf.yml
@@ -1,30 +1,32 @@
+removed_sources:
+  cracklib-2.8.18.tar.gz: 3c4df51b13047fd7a85ae470f568abf8a8d6f92b
 sources:
-  "ASSurnames.bz2": 4ccf5880f1202f4dff5ae828215805a1b2cfa683
-  "Congress.bz2": 13ee6daad1506fcac5a474e2520e59b3147ed390
-  "Domains.bz2": 8e6ff9df9c4b406bf31dd7817533e3cba4ba33e4
-  "Dosref.bz2": fbe677e771b186398530ca154d3b45d20a3269ac
-  "Family-Names.bz2": ea726f092434a8b92bdaabd32465a574dead15b9
-  "Ftpsites.bz2": 41b2afdfabe555b23d119c81a2a9758be3541778
-  "Given-Names.bz2": ae32142b452cc0bb9e7c60002559e42b93554e6b
-  "Jargon.bz2": 8dfe51f47044d329f4189ba0b3e5e170d73dc39f
-  "LCarrol.bz2": cca90f7e894a7b26e9c009b3bb108d35c699daa6
-  "Movies.bz2": d9e8147cb73f34e0421e157852bf103d26d7863a
-  "Paradise.Lost.bz2": 0683989feb936bc6b1a670b543d6ccd97d6ac322
-  "Python.bz2": 9e5da965feffd7483ffafea32385863d115b43e4
-  "Trek.bz2": edb9b0df627fcbdc094a2c4e2f6bd1d0a2cd9c12
-  "cartoon.bz2": 74fd5161fe826f54bc6cb811ae65804661ebc772
-  "common-passwords.txt.bz2": a49277b6db8f4b231ddb79fcf437f463fad21662
-  "cracklib-2.8.18.tar.gz": 3c4df51b13047fd7a85ae470f568abf8a8d6f92b
-  "cracklib-words.bz2": 8591cc072a10e8997addd5de82e45d413cd9c2f8
-  "etc-hosts.bz2": 66677286600e7d75583ef50e612f7fc0974ec651
-  "famous.bz2": 7c2daac2a893d2ad85ab83a452c5bb63db3d1f1d
-  "fast-names.bz2": 22336626be3d4c19daa09cff0649a43d2c25eb29
-  "female-names.bz2": c4de352710b08d9bc43e75fabb56e4eb278b9ed4
-  "male-names.bz2": ae05ad1721befebaa78bab5e9e257ffd5a248f13
-  "myths-legends.bz2": a6f06927fe56f5e3ba4c91c631b8335f5abef158
-  "names.french.bz2": 4ff8351ee593057fd50c320ef37aad0f6019bb0b
-  "names.hp.bz2": 5fe4706fe633ee850f5cebe36c1334b7e2e59603
-  "other-names.bz2": 8b4575e7c0050c92fa12ad74266983d29e5e509c
-  "sf.bz2": 2225733093e8172b10ef9ed8e09843fccead8272
-  "shakespeare.bz2": ce833fa44a77ce6551aef5e7ba27d8e8e283d282
-  "surnames.finnish.bz2": cf2033556e14a0633f8ed29b946bcfaaadcbad33
+  ASSurnames.bz2: 4ccf5880f1202f4dff5ae828215805a1b2cfa683
+  Congress.bz2: 13ee6daad1506fcac5a474e2520e59b3147ed390
+  Domains.bz2: 8e6ff9df9c4b406bf31dd7817533e3cba4ba33e4
+  Dosref.bz2: fbe677e771b186398530ca154d3b45d20a3269ac
+  Family-Names.bz2: ea726f092434a8b92bdaabd32465a574dead15b9
+  Ftpsites.bz2: 41b2afdfabe555b23d119c81a2a9758be3541778
+  Given-Names.bz2: ae32142b452cc0bb9e7c60002559e42b93554e6b
+  Jargon.bz2: 8dfe51f47044d329f4189ba0b3e5e170d73dc39f
+  LCarrol.bz2: cca90f7e894a7b26e9c009b3bb108d35c699daa6
+  Movies.bz2: d9e8147cb73f34e0421e157852bf103d26d7863a
+  Paradise.Lost.bz2: 0683989feb936bc6b1a670b543d6ccd97d6ac322
+  Python.bz2: 9e5da965feffd7483ffafea32385863d115b43e4
+  Trek.bz2: edb9b0df627fcbdc094a2c4e2f6bd1d0a2cd9c12
+  cartoon.bz2: 74fd5161fe826f54bc6cb811ae65804661ebc772
+  common-passwords.txt.bz2: a49277b6db8f4b231ddb79fcf437f463fad21662
+  cracklib-2.8.22.tar.gz: d91d977a1909e0cc3f5cb30754ba5e5e90655ab0
+  cracklib-words.bz2: 8591cc072a10e8997addd5de82e45d413cd9c2f8
+  etc-hosts.bz2: 66677286600e7d75583ef50e612f7fc0974ec651
+  famous.bz2: 7c2daac2a893d2ad85ab83a452c5bb63db3d1f1d
+  fast-names.bz2: 22336626be3d4c19daa09cff0649a43d2c25eb29
+  female-names.bz2: c4de352710b08d9bc43e75fabb56e4eb278b9ed4
+  male-names.bz2: ae05ad1721befebaa78bab5e9e257ffd5a248f13
+  myths-legends.bz2: a6f06927fe56f5e3ba4c91c631b8335f5abef158
+  names.french.bz2: 4ff8351ee593057fd50c320ef37aad0f6019bb0b
+  names.hp.bz2: 5fe4706fe633ee850f5cebe36c1334b7e2e59603
+  other-names.bz2: 8b4575e7c0050c92fa12ad74266983d29e5e509c
+  sf.bz2: 2225733093e8172b10ef9ed8e09843fccead8272
+  shakespeare.bz2: ce833fa44a77ce6551aef5e7ba27d8e8e283d282
+  surnames.finnish.bz2: cf2033556e14a0633f8ed29b946bcfaaadcbad33
