--- a/.abf.yml
+++ b/.abf.yml
@@ -30,5 +30,5 @@ sources:
   cain.txt.bz2: fb84cd677e98b1948a88f2c69e5809b1e883831f
   twitter-banned.txt.bz2: 0fe3f1a0ab99fe8ac4e46a08a93181f35148538d
   500-worst-passwords.txt.bz2: 7de6cb09cebacc033b7657f86b8b9aa27c4320be
-  cracklib-2.9.10.tar.bz2: b44c77a7646a31de01e32eefcaebc5e4a6771560
-  cracklib-words-2.9.10.bz2: 1b342e736b0ece0d78ed36eebdcebc3b52507b54
+  cracklib-2.9.11.tar.xz: 84044c5ddb2dfda194db5ba718944db514042dd8
+  cracklib-words-2.9.11.xz: 5ef0e3e5fb4855cc3702d54faefc1d532e70b9f2
